Add minor adjustments to chapter 3, 5, 6, 7, and 8